--- a/res/views/settings-view.html
+++ b/res/views/settings-view.html
@@ -14,6 +14,10 @@
 <label class"sr-only" for="password">Verify New Password</label><br/>
 <input type="password" class="form-control input-lg" id="newpasswordv"  placeholder="Verify Password" ng-model="newPasswordVerification"/><br/>
 <button type="submit" class="btn btn-primary" ng-click="change_password()" >Change Password</button>
+<br/>
+<br/>
+<button type="submit" class="btn btn-warning" ng-click="clear_reminders()">Reset</button>
+
 </div>
 <div class="col-sm-4">
 </div>
