--- a/res/views/settings-view.html
+++ b/res/views/settings-view.html
@@ -12,7 +12,7 @@
 <label class"sr-only" for="password">New Password</label><br/>
 <input type="password" class="form-control input-lg" id="newpassword"  placeholder="New Password" ng-model="newPassword"/><br/>
 <label class"sr-only" for="password">Verify New Password</label><br/>
-<input type="password" class="form-control input-lg" id="newpasswordv"  placeholder="Verify Password" ng-model="newPasswordVerification"/><br/>
+<input type="password" class="form-control input-lg" id="newpassword"  placeholder="Verify Password" ng-model="newPasswordVerification"/><br/>
 <button type="submit" class="btn btn-primary" ng-click="change_password()" >Change Password</button>
 <br/>
 <br/>
