--- a/res/views/student-settings.html
+++ b/res/views/student-settings.html
@@ -14,7 +14,9 @@
 <label class"sr-only" for="password">Verify New Password</label><br/>
 <input type="password" class="form-control input-lg" id="newpassword"  placeholder="Verify Password" ng-model="newPasswordVerification"/><br/>
 <button type="submit" class="btn btn-primary" ng-click="change_password()" >Change Password</button>
-
+<br/>
+<br/>
+<button type="submit" class="btn btn-warning" ng-click="clear_reminders()">Clear Reminders</button>
 
 </div>
 <div class="col-sm-4">
